--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,18 +13,25 @@
         android:theme="@style/Theme.IcesiApp231"
         tools:targetApi="31">
         <activity
+            android:name=".TestActivity"
+            android:exported="true" >
+        </activity>
+
+        <activity android:name=".PostComposerActivity"/>
+
+
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"/>
-        <activity android:name=".SignupActivity" android:exported="true">
-
-        </activity>
+        <activity android:name=".LoginActivity" />
+        <activity
+            android:name=".SignupActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
